fix getting questions from input